fix overflow bug

--- a/src/index.css
+++ b/src/index.css
@@ -18,6 +18,7 @@ html {
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   width: 100vw;
   height: 100vh;
+  overflow-x: hidden;
 }
 
 body {
@@ -27,6 +28,7 @@ body {
   height: 100vh;
   background-color: var(--bg-color);
   color: var(--text-color);
+  overflow-x: hidden;
 }
 
 .about,
